--- a/src/app/test-management/testcase-review/testcase-review.component.html
+++ b/src/app/test-management/testcase-review/testcase-review.component.html
@@ -1,27 +1,42 @@
-<table class="table">
-    <thead>
-        <tr>
-            <th class="left">#</th>
-            <th>Title</th>
-            <th>Action</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let testCase of testCases; let i = index">
-            <td class="left">{{i + 1}}</td>
-            <td class="left">{{ testCase.title }}</td>
-            <td class="right">
-              <div class="select">
-                  <select id="status" name="status" [(ngModel)]="testCase.status" #status="ngModel" (ngModelChange)="updateTestCaseStatus(testCase)">
-                      <option *ngFor="let status of statusesKeys" [value]="status.value">{{ 'TESTCASESTATUS.' + status.value | translate }}</option>
-                    </select>
-              </div>
-            </td>
-        </tr>
-    </tbody>
-</table>
+<clr-datagrid>
+  <clr-dg-column>#</clr-dg-column>
+  <clr-dg-column>Title</clr-dg-column>
+  <clr-dg-column>Action</clr-dg-column>
 
-<ul >
-  <li></li>
-</ul>
+  <clr-dg-row *ngFor="let testCase of testCases; let i = index">
 
+    <clr-dg-cell>{{i + 1}}</clr-dg-cell>
+    <clr-dg-cell>{{ testCase.title }}</clr-dg-cell>
+    <clr-dg-cell>
+        <div class="select">
+            <select id="status" name="status" [(ngModel)]="testCase.status" #status="ngModel" (ngModelChange)="updateTestCaseStatus(testCase)">
+              <option *ngFor="let status of statusesKeys" [value]="status.value">{{ 'TESTCASESTATUS.' + status.value | translate }}</option>
+            </select>
+          </div>
+    </clr-dg-cell>
+    <clr-dg-row-detail *clrIfExpanded>
+      <span *ngIf="testCase.description">{{ testCase.description }}</span>
+      <h4>Priority</h4>
+      {{ testCase.priority }}
+      <h4>Steps</h4>
+      <table class="table" *ngIf="testCase.steps">
+          <thead>
+              <tr>
+                <th class="left">#</th>
+                <th>Action</th>
+                <th>Test Data</th>
+                <th>Expected Result</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let step of testCase.steps; let i = index">
+                <td class="left">{{i + 1}}</td>
+                <td class="left">{{ step.stepAction }}</td>
+                <td class="left">{{ step.testData }}</td>
+                <td class="right">{{ step.expectedResult }}</td>
+              </tr>
+            </tbody>
+          </table>
+    </clr-dg-row-detail>
+  </clr-dg-row>
+</clr-datagrid>
