--- a/src/app/test-management/testcase-review/testcase-review.component.html
+++ b/src/app/test-management/testcase-review/testcase-review.component.html
@@ -1,7 +1,7 @@
 <clr-datagrid>
   <clr-dg-column>#</clr-dg-column>
-  <clr-dg-column>Title</clr-dg-column>
-  <clr-dg-column>Action</clr-dg-column>
+  <clr-dg-column>{{ 'TESTCASECREATEPAGE.TITLE' | translate }}</clr-dg-column>
+  <clr-dg-column>{{ 'TESTMANAGEMENTPAGE.STEP_ACTION' | translate }}</clr-dg-column>
 
   <clr-dg-row *ngFor="let testCase of testCases; let i = index">
 
@@ -16,16 +16,16 @@
     </clr-dg-cell>
     <clr-dg-row-detail *clrIfExpanded>
       <span *ngIf="testCase.description">{{ testCase.description }}</span>
-      <h4>Priority</h4>
+      <h4>{{ 'TESTCASECREATEPAGE.PRIORITY' | translate }}</h4>
       {{ testCase.priority }}
-      <h4>Steps</h4>
+      <h4>{{ 'TESTCASECREATEPAGE.STEPS' | translate }}</h4>
       <table class="table" *ngIf="testCase.steps">
           <thead>
               <tr>
                 <th class="left">#</th>
-                <th>Action</th>
-                <th>Test Data</th>
-                <th>Expected Result</th>
+                <th>{{ 'TESTMANAGEMENTPAGE.STEP_ACTION' | translate }}</th>
+                <th>{{ 'TESTMANAGEMENTPAGE.TEST_DATA' | translate }}</th>
+                <th>{{ 'TESTMANAGEMENTPAGE.EXPECTED_RESULT' | translate }}</th>
               </tr>
             </thead>
             <tbody>
