--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="content-area">
   <div class="row">
     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
       <div class="card clickable">
