fix(ui): fix styles for mobile devices

--- a/src/app/project-layout/project-layout.component.html
+++ b/src/app/project-layout/project-layout.component.html
@@ -4,8 +4,7 @@
     <app-sidebar></app-sidebar>
   </clr-vertical-nav>
 
-  <div class="content-area">
-    <!-- content-area should not contain paddings or margins for secondary sidenav -->
+  <div class="router-wrapper">
     <router-outlet></router-outlet>
   </div>
 </div>
