--- a/src/app/settings/inventory/inventory.component.html
+++ b/src/app/settings/inventory/inventory.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper" *ngIf="devices">
+<div class="content-area" *ngIf="devices">
   <!--
   <div class="row">
     <input type="text" id="search" name="search" placeholder="{{ 'DEVICESSETTINGS.SEARCH' | translate }}">
