--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -27,7 +27,7 @@
 
   </clr-vertical-nav>
 
-  <div class="content-area">
+  <div class="router-wrapper">
     <router-outlet></router-outlet>
   </div>
 </div>
