--- a/src/app/settings/users/users.component.html
+++ b/src/app/settings/users/users.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="content-area">
   <clr-tabs>
     <clr-tab>
       <button clrTabLink id="link1">{{ 'USERSSETTINGS.USERS_TAB' | translate }}</button>
