--- a/src/app/test-management/test-management.component.html
+++ b/src/app/test-management/test-management.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="testSuites" class="wrapper">
+<div *ngIf="testSuites" class="content-area">
 
   <div *ngIf="testSuites.length > 0; then existTestSuites else noExistTestSuites"></div>
   <ng-template #existTestSuites>
