--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -5,7 +5,7 @@
 
 @media screen and (max-width: 992px) {
     .content-area {
-        width: calc(100vw - 20px);
+        width: 100vw;
         height: calc(100vh - 60px);
     }
 }
