--- a/src/app/settings/inventory/inventory.component.css
+++ b/src/app/settings/inventory/inventory.component.css
@@ -1,7 +1,16 @@
-td clr-icon {
-    color: #777;
+.content-area {
+    width: calc(100vw - 240px);
+    height: calc(100vh - 60px);
 }
 
-.wrapper {
-    height: calc(100vh - 110px);
+@media screen and (max-width: 992px) {
+    .content-area {
+        padding: 0 !important;
+        width: 100vw;
+        height: calc(100vh - 60px);
+    }
+}
+
+td clr-icon {
+    color: #777;
 }
