--- a/src/app/settings/users/users.component.css
+++ b/src/app/settings/users/users.component.css
@@ -1,3 +1,16 @@
+.content-area {
+    width: calc(100vw - 240px);
+    height: calc(100vh - 60px);
+}
+
+@media screen and (max-width: 992px) {
+    .content-area {
+        padding: 0 !important;
+        width: 100vw;
+        height: calc(100vh - 60px);
+    }
+}
+
 .wrapper {
     height: calc(100vh - 110px);
 }
@@ -11,15 +24,15 @@
 }
 
 .avatar-name {
-  position: relative;
-  top: 4px;
-  font-size: 50% !important;
+    position: relative;
+    top: 4px;
+    font-size: 50% !important;
 }
 
 .active-user {
-  color: #62A420;
+    color: #62A420;
 }
 
 .inactive-user {
-  color: #C92100;
+    color: #C92100;
 }
