--- a/src/app/test-management/testcase-review/testcase-review.component.css
+++ b/src/app/test-management/testcase-review/testcase-review.component.css
@@ -1,3 +1,20 @@
+.content-area {
+    width: calc(100vw - 240px);
+    height: calc(100vh - 60px);
+}
+
+@media screen and (max-width: 992px) {
+    .content-area {
+        padding: 0 !important;
+        width: 100vw;
+        height: calc(100vh - 60px);
+    }
+}
+
+.h4 {
+    padding: 20px 0 0 20px;
+}
+
 clr-dg-row-detail {
-  flex-direction: column;
+    flex-direction: column;
 }
