--- a/src/app/test-management/testcase-review/testcase-review.component.html
+++ b/src/app/test-management/testcase-review/testcase-review.component.html
@@ -1,44 +1,46 @@
-<h4>{{ 'PROJECTSPAGE.TESTCASE_REVIEW' | translate }}</h4>
-<clr-datagrid>
-  <clr-dg-column>#</clr-dg-column>
-  <clr-dg-column>{{ 'TESTCASECREATEPAGE.TITLE' | translate }}</clr-dg-column>
-  <clr-dg-column>{{ 'TESTMANAGEMENTPAGE.STEP_ACTION' | translate }}</clr-dg-column>
+<div class="content-area">
+  <h4 class="h4">{{ 'PROJECTSPAGE.TESTCASE_REVIEW' | translate }}</h4>
+  <clr-datagrid>
+    <clr-dg-column>#</clr-dg-column>
+    <clr-dg-column>{{ 'TESTCASECREATEPAGE.TITLE' | translate }}</clr-dg-column>
+    <clr-dg-column>{{ 'TESTMANAGEMENTPAGE.STEP_ACTION' | translate }}</clr-dg-column>
 
-  <clr-dg-row *ngFor="let testCase of testCases; let i = index">
+    <clr-dg-row *ngFor="let testCase of testCases; let i = index">
 
-    <clr-dg-cell>{{i + 1}}</clr-dg-cell>
-    <clr-dg-cell>{{ testCase.title }}</clr-dg-cell>
-    <clr-dg-cell>
+      <clr-dg-cell>{{i + 1}}</clr-dg-cell>
+      <clr-dg-cell>{{ testCase.title }}</clr-dg-cell>
+      <clr-dg-cell>
         <div class="select">
-            <select id="status" name="status" [(ngModel)]="testCase.status" #status="ngModel" (ngModelChange)="updateTestCaseStatus(testCase)">
-              <option *ngFor="let status of statusesKeys" [value]="status.value">{{ 'TESTCASESTATUS.' + status.value | translate }}</option>
-            </select>
-          </div>
-    </clr-dg-cell>
-    <clr-dg-row-detail *clrIfExpanded>
-      <h4>{{ 'TESTCASECREATEPAGE.DESCRIPTION' | translate }}</h4>
-      <span *ngIf="testCase.description">{{ testCase.description }}</span>
-      <h4>{{ 'TESTCASECREATEPAGE.PRIORITY' | translate }}</h4>
-      {{ 'PRIORITIES.' + testCase.priority | translate }}
-      <h4>{{ 'TESTCASECREATEPAGE.STEPS' | translate }}</h4>
-      <table class="table" *ngIf="testCase.steps">
+          <select id="status" name="status" [(ngModel)]="testCase.status" #status="ngModel" (ngModelChange)="updateTestCaseStatus(testCase)">
+            <option *ngFor="let status of statusesKeys" [value]="status.value">{{ 'TESTCASESTATUS.' + status.value | translate }}</option>
+          </select>
+        </div>
+      </clr-dg-cell>
+      <clr-dg-row-detail *clrIfExpanded>
+        <h4>{{ 'TESTCASECREATEPAGE.DESCRIPTION' | translate }}</h4>
+        <span *ngIf="testCase.description">{{ testCase.description }}</span>
+        <h4>{{ 'TESTCASECREATEPAGE.PRIORITY' | translate }}</h4>
+        {{ 'PRIORITIES.' + testCase.priority | translate }}
+        <h4>{{ 'TESTCASECREATEPAGE.STEPS' | translate }}</h4>
+        <table class="table" *ngIf="testCase.steps">
           <thead>
-              <tr>
-                <th class="left">#</th>
-                <th>{{ 'TESTMANAGEMENTPAGE.STEP_ACTION' | translate }}</th>
-                <th>{{ 'TESTMANAGEMENTPAGE.TEST_DATA' | translate }}</th>
-                <th>{{ 'TESTMANAGEMENTPAGE.EXPECTED_RESULT' | translate }}</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let step of testCase.steps; let i = index">
-                <td class="left">{{i + 1}}</td>
-                <td class="left">{{ step.stepAction }}</td>
-                <td class="left">{{ step.testData }}</td>
-                <td class="right">{{ step.expectedResult }}</td>
-              </tr>
-            </tbody>
-          </table>
-    </clr-dg-row-detail>
-  </clr-dg-row>
-</clr-datagrid>
+            <tr>
+              <th class="left">#</th>
+              <th>{{ 'TESTMANAGEMENTPAGE.STEP_ACTION' | translate }}</th>
+              <th>{{ 'TESTMANAGEMENTPAGE.TEST_DATA' | translate }}</th>
+              <th>{{ 'TESTMANAGEMENTPAGE.EXPECTED_RESULT' | translate }}</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let step of testCase.steps; let i = index">
+              <td class="left">{{i + 1}}</td>
+              <td class="left">{{ step.stepAction }}</td>
+              <td class="left">{{ step.testData }}</td>
+              <td class="right">{{ step.expectedResult }}</td>
+            </tr>
+          </tbody>
+        </table>
+      </clr-dg-row-detail>
+    </clr-dg-row>
+  </clr-datagrid>
+</div>
