fix(testruns): fix dates from date pickers

--- a/src/app/test-executions/create-test-run-modal/create-test-run-modal.component.html
+++ b/src/app/test-executions/create-test-run-modal/create-test-run-modal.component.html
@@ -18,12 +18,12 @@
 
         <div class="form-group">
           <label for="startDate">Started from date</label>
-          <input type="date" id="startDate" name="startDate" [(ngModel)]="testrun.startDate" clrDate>
+          <input type="date" id="startDate" name="startDate" [(clrDate)]="testrun.startDate">
         </div>
 
         <div class="form-group">
           <label for="endDate">Till date</label>
-          <input type="date" id="endDate" name="endDate" [(ngModel)]="testrun.endDate" clrDate>
+          <input type="date" id="endDate" name="endDate" [(clrDate)]="testrun.endDate">
         </div>
 
       </section>
