fix(testrun): fix ui paddings for test runs

--- a/src/app/test-executions/test-executions-details/test-executions-details.component.css
+++ b/src/app/test-executions/test-executions-details/test-executions-details.component.css
@@ -1,3 +1,17 @@
+
+.content-area {
+  width: calc(100vw - 280px);
+  height: calc(100vh - 60px);
+}
+
+@media screen and (max-width: 992px) {
+  .content-area {
+      width: 100vw;
+      height: calc(100vh - 60px);
+  }
+}
+
+
 .chart-text {
   transform: translateY(0.25em);
 }
@@ -19,3 +33,4 @@
 .dashboard {
   display: flex;
 }
+
