--- a/src/app/test-executions/test-executions-details/test-executions-details.component.html
+++ b/src/app/test-executions/test-executions-details/test-executions-details.component.html
@@ -1,3 +1,4 @@
+<div class="content-area">
 <h3 *ngIf="testrun">
   {{testrun.name}}
   <!--<a (click)="onEdit();" class="btn btn-primary">
@@ -87,3 +88,4 @@
   <li>testcases</li>
 </ul>
 -->
+</div>
