--- a/src/app/test-executions/test-executions-details/test-executions-details.component.html
+++ b/src/app/test-executions/test-executions-details/test-executions-details.component.html
@@ -1,48 +1,53 @@
 <div class="content-area">
-<h3 *ngIf="testrun">
-  {{testrun.name}}
-  <!--<a (click)="onEdit();" class="btn btn-primary">
+  <h3 *ngIf="testrun">
+    {{testrun.name}}
+    <!--<a (click)="onEdit();" class="btn btn-primary">
     <clr-icon shape="pencil"></clr-icon> {{ 'TESTMANAGEMENTPAGE.EDIT' | translate }}
   </a>-->
-</h3><br>
-<div class="dashboard">
+  </h3>
+  <br>
+  <div class="dashboard">
 
-<div style="width: 150px;">
-  <svg width="100%" height="100%" viewBox="0 0 42 42" class="donut">
-    <circle class="donut-ring" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#000000" stroke-opacity="0.15" stroke-width="3"></circle>
+    <div style="width: 150px;">
+      <svg width="100%" height="100%" viewBox="0 0 42 42" class="donut">
+        <circle class="donut-ring" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#000000" stroke-opacity="0.15"
+          stroke-width="3"></circle>
 
-    <circle class="donut-segment" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#5ea41c" stroke-width="3" stroke-dasharray="85 15" stroke-dashoffset="25"></circle>
-    <g class="chart-text">
-      <text x="50%" y="50%" class="chart-number">
-        85%
-      </text>
-      <text x="50%" y="50%" class="chart-label">
-        Completed
-      </text>
-    </g>
-  </svg>
-</div>
+        <circle class="donut-segment" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#5ea41c" stroke-width="3"
+          stroke-dasharray="85 15" stroke-dashoffset="25"></circle>
+        <g class="chart-text">
+          <text x="50%" y="50%" class="chart-number">
+            85%
+          </text>
+          <text x="50%" y="50%" class="chart-label">
+            Completed
+          </text>
+        </g>
+      </svg>
+    </div>
 
-<div style="width: 150px;">
-    <svg width="100%" height="100%" viewBox="0 0 42 42" class="donut">
-      <circle class="donut-ring" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#000000" stroke-opacity="0.15" stroke-width="3"></circle>
+    <div style="width: 150px;">
+      <svg width="100%" height="100%" viewBox="0 0 42 42" class="donut">
+        <circle class="donut-ring" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#000000" stroke-opacity="0.15"
+          stroke-width="3"></circle>
 
-      <circle class="donut-segment" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#007cbb" stroke-width="3" stroke-dasharray="85 15" stroke-dashoffset="25"></circle>
-      <g class="chart-text">
-        <text x="50%" y="50%" class="chart-number">
-          85%
-        </text>
-        <text x="50%" y="50%" class="chart-label">
-          Passed
-        </text>
-      </g>
-    </svg>
+        <circle class="donut-segment" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#007cbb" stroke-width="3"
+          stroke-dasharray="85 15" stroke-dashoffset="25"></circle>
+        <g class="chart-text">
+          <text x="50%" y="50%" class="chart-number">
+            85%
+          </text>
+          <text x="50%" y="50%" class="chart-label">
+            Passed
+          </text>
+        </g>
+      </svg>
+    </div>
+
   </div>
 
-</div>
-
-<br>
-<!--
+  <br>
+  <!--
 <a class="btn btn-primary">
   <clr-icon shape="plus"></clr-icon> Add testcases
 </a>
@@ -50,7 +55,7 @@
 -->
 
 
-<!--
+  <!--
 <div style="width: 150px;">
   <svg width="100%" height="100%" viewBox="0 0 42 42" class="donut">
     <circle class="donut-ring" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#000000" stroke-opacity="0.15" stroke-width="3"></circle>
@@ -77,7 +82,7 @@
 </div>
 -->
 
-<!--
+  <!--
 <ul>
   <li>test execution name</li>
   <li>test execution description</li>
