--- a/src/app/test-management/test-cases/test-cases.component.css
+++ b/src/app/test-management/test-cases/test-cases.component.css
@@ -1,27 +1,31 @@
 .positive-case {
-  color: #62A420;
+    color: #62A420;
 }
 
 .negative-case {
-  color: #C92100;
+    color: #C92100;
 }
 
 .blocker-color {
-  color: #313131;
+    color: #313131;
 }
 
 .critical-color {
-  color: #C92100;
+    color: #C92100;
 }
 
 .major-color {
-  color: #F38B00;
+    color: #F38B00;
 }
 
 .minor-color {
-  color: #62A420;
+    color: #62A420;
 }
 
 .trivial-color {
-  color: #007CBB;
+    color: #007CBB;
+}
+
+clr-datagrid {
+    height: 21rem;
 }
