--- a/src/app/test-executions/test-executions-details/test-executions-details.component.html
+++ b/src/app/test-executions/test-executions-details/test-executions-details.component.html
@@ -1,13 +1,74 @@
-<div class="content-area">
-  <h3 *ngIf="testrun">
-    {{testrun.name}}
-    <!--<a (click)="onEdit();" class="btn btn-primary">
-    <clr-icon shape="pencil"></clr-icon> {{ 'TESTMANAGEMENTPAGE.EDIT' | translate }}
-  </a>-->
-  </h3>
-  <br>
-  <div class="dashboard">
+<div *ngIf="testrun" class="content-area">
 
+  <div *ngIf="testrun.testcases.length > 0; then existTestCases else noExistTestCases"></div>
+
+  <ng-template #existTestCases>
+    <h3>
+      {{testrun.name}}
+      <!--<a (click)="onEdit();" class="btn btn-primary">
+            <clr-icon shape="pencil"></clr-icon> {{ 'TESTMANAGEMENTPAGE.EDIT' | translate }}
+          </a>-->
+    </h3>
+    <br>
+
+    <div class="wrapper">
+      <!--<app-testcase-review-notification></app-testcase-review-notification>-->
+      <!-- TODO due date notifications -->
+      fdkfjdj
+    </div>
+
+  </ng-template>
+
+  <ng-template #noExistTestCases>
+    <div class="wrapper">
+        <div class="title-header">
+            <h3>
+                {{testrun.name}}
+              </h3>
+
+                  <a (click)="onEdit();" class="btn btn-primary">
+                      <clr-icon shape="pencil"></clr-icon> {{ 'TESTMANAGEMENTPAGE.EDIT' | translate }}
+                    </a>
+
+          </div>
+
+
+    <div class="noexist-wrapper">
+
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+        <div class="no-testsuites">
+          <img src="assets/add-project.png">
+          <h4>У вас не добавлено ни одного тест кейса к Тестовому Прогону.</h4>
+          <p class="tips">Нажмите кнопку 'Добавить тест кейсы' для добавления тест кейсов к прогону</p>
+          <a class="btn btn-primary" (click)="onAdd();">Добавить тест кейсы</a>
+        </div>
+
+      </div>
+    </div>
+</div>
+  </ng-template>
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--<div class="dashboard">-->
+
+<!--
     <div style="width: 150px;">
       <svg width="100%" height="100%" viewBox="0 0 42 42" class="donut">
         <circle class="donut-ring" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#000000" stroke-opacity="0.15"
@@ -43,11 +104,11 @@
         </g>
       </svg>
     </div>
+    -->
 
-  </div>
+<!--</div>-->
 
-  <br>
-  <!--
+<!--
 <a class="btn btn-primary">
   <clr-icon shape="plus"></clr-icon> Add testcases
 </a>
@@ -55,7 +116,7 @@
 -->
 
 
-  <!--
+<!--
 <div style="width: 150px;">
   <svg width="100%" height="100%" viewBox="0 0 42 42" class="donut">
     <circle class="donut-ring" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#000000" stroke-opacity="0.15" stroke-width="3"></circle>
@@ -82,7 +143,7 @@
 </div>
 -->
 
-  <!--
+<!--
 <ul>
   <li>test execution name</li>
   <li>test execution description</li>
@@ -93,4 +154,3 @@
   <li>testcases</li>
 </ul>
 -->
-</div>
