--- a/src/app/test-executions/test-executions-details/test-executions-details.component.html
+++ b/src/app/test-executions/test-executions-details/test-executions-details.component.html
@@ -21,32 +21,32 @@
 
   <ng-template #noExistTestCases>
     <div class="wrapper">
-        <div class="title-header">
-            <h3>
-                {{testrun.name}}
-              </h3>
+      <div class="title-header">
+        <h3>
+          {{testrun.name}}
+        </h3>
 
-                  <a (click)="onEdit();" class="btn btn-primary">
-                      <clr-icon shape="pencil"></clr-icon> {{ 'TESTMANAGEMENTPAGE.EDIT' | translate }}
-                    </a>
-
-          </div>
-
-
-    <div class="noexist-wrapper">
-
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-
-        <div class="no-testsuites">
-          <img src="assets/add-project.png">
-          <h4>У вас не добавлено ни одного тест кейса к Тестовому Прогону.</h4>
-          <p class="tips">Нажмите кнопку 'Добавить тест кейсы' для добавления тест кейсов к прогону</p>
-          <a class="btn btn-primary" (click)="onAdd();">Добавить тест кейсы</a>
-        </div>
+        <a (click)="onEdit();" class="btn btn-primary">
+          <clr-icon shape="pencil"></clr-icon> {{ 'TESTMANAGEMENTPAGE.EDIT' | translate }}
+        </a>
 
       </div>
+
+
+      <div class="noexist-wrapper">
+
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+          <div class="no-testsuites">
+            <img src="assets/add-project.png">
+            <h4>У вас не добавлено ни одного тест кейса к Тестовому Прогону.</h4>
+            <p class="tips">Нажмите кнопку 'Добавить тест кейсы' для добавления тест кейсов к прогону</p>
+            <a class="btn btn-primary" routerLink="./add">Добавить тест кейсы</a>
+          </div>
+
+        </div>
+      </div>
     </div>
-</div>
   </ng-template>
 
 
